# underwriting-docs-rag

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: manifest.json
configs/: project.json
data/: README.md
demo/: index.html
docs/: architecture.md  deployment.md  evaluation.md  index.html  landing.css  runbook.md
scripts/: bootstrap_data.py
src/app/: engine.py  main.py
src/app/web/: app.js  index.html  styles.css
tests/: test_app.py  test_smoke.py
