
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underwriting-docs-rag"
version = "0.1.0"
description = "Search underwriting manuals, exceptions, and policy notes with grounded answers for reviewers."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
